# CIDEPINT

./: README.md
admin/: README.md  app.py  node_modules.rar  package-lock.json  package.json  pyproject.toml
admin/src/core/auth/: __init__.py
admin/src/core/board/: seeds.py
admin/src/core/config/: database.py
admin/src/core/controller/: auth.py  configuration.py  error_service.py  institution.py  relation.py  request.py  service.py  user.py
admin/src/core/controller/errors/: error_401.py  error_404.py
admin/src/core/forms/: institutions.py  service.py  user.py
admin/src/core/models/: __init__.py  confirmation_user.py  institutions.py  note.py  permissions.py  role_permission.py  roles.py  solicitude.py  user_institution_role.py  users.py
admin/src/core/models/Institutional_Services/: services.py
admin/src/core/seeds/: __init__.py
admin/src/web/: __init__.py  configs.py
admin/src/web/Filter_api/: service_filter.py
admin/src/web/api/: auth.py  contact.py  institutions.py  note.py  services.py  services_types.py  solicitude.py  user.py  validations.py
admin/src/web/helpers/: auth.py  institutions.py  paging.py  role.py  user.py
admin/src/web/schemas/: institutions.py  notes.py  permissions.py  roles.py  services.py  services_types.py  solicitude.py  user.py  user_institution_role.py
admin/src/web/templates/: error.html  error401.html  home.html  layout.html  mantenimiento.html
admin/src/web/templates/auth/: complete_registration.html  confirmation.html  login.html  register.html
admin/static/css/: chat.css  error.css  layout.css
(+52 files in other folders)
